--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background: 255, 255, 255;
   --accent-color: 7, 71, 166;
+  --accent-text-color: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -13,10 +14,14 @@
     --foreground-rgb: 255, 255, 255;
     --accent-color: 24, 24, 24;
     --background: 0, 0, 0;
+    --accent-text-color: 255, 255, 255;
   }
 }
 
 body {
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background));
 }
