--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,22 @@ body {
   width: 100vw;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scrollbar-hide {
+  scrollbar-width: none;
+}
+
+/* Prevent div from going below its parent size */
+.max-h-full {
+  max-height: 100%;
+  overflow: auto;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
