--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,17 @@
 /** @format */
 
 @tailwind base;
+
+/* Firefox */
+* {
+  scrollbar-width: none;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  display: none;
+}
+
 @tailwind components;
 @tailwind utilities;
 
@@ -10,14 +21,24 @@ body {
   width: 100vw;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
+.scrollbar-thin {
+  scrollbar-width: thin;
+  scrollbar-color: oklch(var(--n)) oklch(var(--b1));
 }
 
-/* Hide scrollbar for Firefox */
-.scrollbar-hide {
-  scrollbar-width: none;
+.scrollbar-thin::-webkit-scrollbar {
+  width: 15px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track {
+  background: oklch(var(--n));
+  border-radius: 5px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: oklch(var(--n));
+  border-radius: 14px;
+  border: 3px solid oklch(var(--b1));
 }
 
 /* Prevent div from going below its parent size */
