--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,10 @@ body {
   width: 100vw;
 }
 
+h1 {
+  font-size: 2.5rem;
+}
+
 .scrollbar-thin {
   scrollbar-width: thin;
   scrollbar-color: oklch(var(--n)) oklch(var(--b1));
