--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@ h1 {
   font-weight: 600;
 }
 
+.scrollbar-hidden {
+  scrollbar-width: none;
+}
+
 .scrollbar-thin {
   scrollbar-width: thin;
   scrollbar-color: oklch(var(--n)) oklch(var(--b1));
